deploy/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-and-api-ingress
  namespace: default
  annotations:
    # Use the deployed AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-2:339712723771:certificate/979d85f0-c2c2-4dbf-afaa-7c01e6513f76"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/actions.redirect-to-https: |
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}
spec:
  rules:
  - host: gym.johnprater.me
    http:
      paths:
      # Route for the web server (default path "/")
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-service
            port:
              number: 3000
      # Route for the Python API (path "/api")
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: gym-track-core
            port:
              number: 80
  tls:
  - hosts:
    - gym.johnprater.me
    secretName: gym-tls
